# Synthesis_project

./: CMakeLists.txt  align_features.py  combine_results.py  hasSolarPanels.ipynb  image_classification.py  import_open_datasets.py  main.py  obtacle_area.csv  params.json  params2.json  read_params.py  roof_classification.py  roof_obstacles.py  roof_semantics.csv
combine_results/: 0772100000293562_mix.tif  0772100000293563_mix.tif  0772100000293564_mix.tif  0772100000293565_mix.tif  0772100000293566_mix.tif  0772100000293567_mix.tif  0772100000295738_mix.tif  0772100000295739_mix.tif  0772100000296471_mix.tif  0772100000296758_mix.tif  0772100000296759_mix.tif  0772100000296760_mix.tif  0772100000296761_mix.tif  0772100000296762_mix.tif  0772100000296763_mix.tif  0772100000296854_mix.tif  0772100000296999_mix.tif  0772100000297414_mix.tif  0772100000297596_mix.tif  0772100000297597_mix.tif  0772100000297598_mix.tif  0772100000297599_mix.tif  0772100000297600_mix.tif  0772100000297601_mix.tif  0772100000297602_mix.tif  0772100000297603_mix.tif  0772100000297765_mix.tif  0772100000302908_mix.tif  0772100000302909_mix.tif  0772100000302910_mix.tif  0772100000302911_mix.tif  0772100000302912_mix.tif  0772100000302913_mix.tif  0772100000302914_mix.tif  0772100000302915_mix.tif  0772100000302916_mix.tif  0772100000302917_mix.tif  0772100001000734_mix.tif  0772100001000755_mix.tif  0772100001000765_mix.tif  (+10 more)
data/: extract.ply  extract1_n_rad7.ply  extract2.json  extract2.ply  extract2_n_rad7.ply  extract3.json  extract3.ply  extract3_2.json  extract3_n_rad7.ply  extract4.json  (+5 more)
(+400 files in other folders)
